--- a/templates/snippet/head.html
+++ b/templates/snippet/head.html
@@ -21,5 +21,10 @@
     seajs.config({ alias: data.dependencies })
     seajs.config({ alias: data.devDependencies })
     seajs.config({ alias: {{render_src(writer)}} })
+
+    // for alice
+    for(var dep in data.dependencies) {
+        seajs.use(dep);
+    }
   })();
 </script>
