--- a/templates/post.html
+++ b/templates/post.html
@@ -25,3 +25,7 @@
     <p>这是模块的输出文件，请 require 或 seajs.use 以上 ID 来使用本文件，具体 API 请阅读文档。</p>
 </div>
 {%- endblock %}
+
+{%- block foot %}
+{%- endblock %}
+
