--- a/templates/layout.html
+++ b/templates/layout.html
@@ -46,7 +46,7 @@
     <div id="footer-wrapper">
       <footer>
         <p class="powered">
-        {%- block footer %}{%- endblock %}
+        {%- include "snippet/foot.html" %}
         </p>
       </footer>
     </div>
