--- a/templates/snippet/head.html
+++ b/templates/snippet/head.html
@@ -22,11 +22,20 @@
     seajs.config({ alias: data.devDependencies })
     seajs.config({ alias: {{render_src(writer)}} })
 
-    // for alice
-    for(var dep in data.dependencies) {
-        // 如果依赖的是样式模块
-        if (data.dependencies[dep].indexOf('.css') > 0) {
-            seajs.use(dep);
+    var dependencies;
+    if (data.spm && data.spm.alias) {
+        loadCss(data.spm.alias);
+    } else {
+        loadCss(data.dependencies);
+    }
+
+    function loadCss(dependencies) {
+        // for alice
+        for(var dep in dependencies) {
+            // 如果依赖的是样式模块
+            if (dependencies[dep].indexOf('.css') > 0) {
+                seajs.use("http://assets.spmjs.org/" + dependencies[dep]);
+            }
         }
     }
 
