--- a/templates/post.html
+++ b/templates/post.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{%- block title -%}{{config.package.name|title}} - {{post.title}}{%- endblock -%}
+{%- block title -%}{{config.package.family}}/{{config.package.name}} - {{post.title}}{%- endblock -%}
 
 {% block content %}
 <article class="hentry">
@@ -13,16 +13,16 @@
 
 {%- block subsidebar %}
 <ul id="module-output">
-  {%- if config.package.output|length > 1 %}
-  <li class="module-multiable" title="本组件共有{{config.package.output|length}}个子模块">多模块</li>
+  {%- if config.package.spm.output|length > 1 %}
+  <li class="module-multiable" title="本组件共有{{config.package.spm.output|length}}个子模块">多模块</li>
     {%- for value in config.package.output %}
     <li><a data-file="{{loop.key}}" href="{{content_url('dist/')}}{{loop.key}}">■</a></li>
     {%- endfor %}
   {%- endif %} 
 </ul>
 <div id="output-card">
-    <h3>{{config.package.root}}/{{config.package.name}}/{{config.package.version}}/<a target="_blank" id="output-file"></a></h3>
-    <p>这是模块的输出文件，请 require 或 seajs.use 以上 ID 来使用本文件，具体 API 请阅读文档。</p>
+    <h3>{{config.package.family}}/{{config.package.name}}/{{config.package.version}}/<a target="_blank" id="output-file"></a></h3>
+    <p>这是模块的输出文件，请 require 或 link 来加载此文件。</p>
 </div>
 {%- endblock %}
 
