fix multiable modules display

--- a/templates/post.html
+++ b/templates/post.html
@@ -15,8 +15,8 @@
 <ul id="module-output">
   {%- if config.package.spm.output|length > 1 %}
   <li class="module-multiable" title="本组件共有{{config.package.spm.output|length}}个子模块">多模块</li>
-    {%- for value in config.package.output %}
-    <li><a data-file="{{loop.key}}" href="{{content_url('dist/')}}{{loop.key}}">■</a></li>
+    {%- for value in config.package.spm.output %}
+    <li><a data-file="{{value}}" href="dist/{{value}}">■</a></li>
     {%- endfor %}
   {%- endif %} 
 </ul>
