--- a/templates/snippet/head.html
+++ b/templates/snippet/head.html
@@ -24,7 +24,7 @@
 
 {%- else %}
 
-<script src="http://assets.spmjs.org/seajs/seajs/2.0.0/??sea.js,plugin-combo.js"></script>
+<script src="{{config.assets_host}}/seajs/seajs/2.0.0/??sea.js,plugin-combo.js,plugin-text.js,plugin-style.js"></script>
 
 {%- endif %}
 
