--- a/templates/post.html
+++ b/templates/post.html
@@ -13,12 +13,10 @@
 
 {%- block subsidebar %}
 <ul id="module-output">
-  {%- if config.package.spm.output|length > 1 %}
-  <li class="module-multiable" title="本组件共有{{config.package.spm.output|length}}个子模块">多模块</li>
+  <li class="module-multiable" title="本组件共有{{config.package.spm.output|length}}个子模块">文件</li>
     {%- for value in config.package.spm.output %}
     <li><a data-file="{{value}}" href="dist/{{value}}">■</a></li>
     {%- endfor %}
-  {%- endif %} 
 </ul>
 <div id="output-card">
     <h3>{{config.package.family}}/{{config.package.name}}/{{config.package.version}}/<a target="_blank" id="output-file"></a></h3>
