--- a/static/css/site.css
+++ b/static/css/site.css
@@ -175,8 +175,6 @@ pre, code, tt {
     font-family: Georgia,'Xin Gothic','PT Sans','Hiragino Sans GB','Helvetica Neue',Helvetica,Arial,sans-serif;
     color: #555;
 }
-.hentry p, .hentry ul, .hentry ol {
-}
 .hentry a {
     color: #55A4F2;
     text-decoration: none;
@@ -431,4 +429,11 @@ pre, code, tt {
     border: 1px solid #ddd;
     color: #777;
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2) inset;
+}
+
+.nico-insert-code h2 {
+    margin: 0;
+    padding: 0;
+    border-bottom: none;
+    font-family: sans-serif;
 }
