--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,7 @@
       {%- block body %}
       <aside id="sidebar-wrapper">
         <h1><a href="{{content_url('index.html')}}">{{config.package.name|title}}</a><sup class="package-root"><a href="/">{{config.package.family}}</a></sup></h1>
-        <p class="version">当前版本：<span>{{config.package.version}}</span></p>
+        <p class="version">当前版本：<a title="历史记录" href="{{content_url('history.html')}}">{{config.package.version}}</a></p>
         <p class="description">{{config.package.description}}</p>
         <p class="keywords" style="display: none;">{{config.package.keywords[0]}}</p>
         {%- if config.package.repository %}
