--- a/templates/snippet/head.html
+++ b/templates/snippet/head.html
@@ -101,7 +101,7 @@
         cssArray.push(aliasArray[i]);
       }
     }
-    seajs.use(aliasArray);
+    seajs.use(cssArray);
     
   {%- endif %}
   })();
