--- a/templates/snippet/head.html
+++ b/templates/snippet/head.html
@@ -91,16 +91,16 @@
     }});
 
     // 加载依赖的 css 文件
-    var aliasArray = [], cssArray = [];
+    var cssArray = [];
     {%- for value in pkg.spm.alias %}
-    aliasArray.push('{{value}}');
+    cssArray.push('{{value}}');
     {%- endfor %}
-
-    for (var i=0; i<aliasArray; i++) {
-      if (aliasArray[i].indexOf('.css') > 0) {
-        cssArray.push(aliasArray[i]);
+    for (var i=0; i<cssArray.length; i++) {
+      if (cssArray[i].indexOf('.css') < 0) {
+        cssArray.splice(i, 1);
       }
     }
+    console.log(cssArray);
     seajs.use(cssArray);
     
   {%- endif %}
