--- a/templates/snippet/head.html
+++ b/templates/snippet/head.html
@@ -26,7 +26,13 @@
 
 {%- else %}
 
-<script src="{{config.assets_host}}/seajs/seajs/2.0.0/??sea.js,plugin-combo.js,plugin-text.js,plugin-style.js"></script>
+<script src="{{config.assets_host}}/??
+seajs/seajs/2.1.1/sea.js,
+seajs/seajs-combo/1.0.0/seajs-combo.js,
+seajs/seajs-debug/1.0.0/seajs-debug.js,
+seajs/seajs-style/1.0.0/seajs-style.js,
+seajs/seajs-health/0.1.0/seajs-health.js,
+jquery/jquery/1.7.2/jquery.js"></script>
 
 {%- endif %}
 
@@ -100,7 +106,6 @@
         cssArray.splice(i, 1);
       }
     }
-    console.log(cssArray);
     seajs.use(cssArray);
     
   {%- endif %}
